# midas

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  build  build.bat  calib_1000.c  calib_520.c  calib_700.c  calib_900.c  calib_hvr.c  elog.nsi  install.bat  makefile  makefile.nt  msc.c  mscb.c  mscb.h  mscbrpc.c  odb.xsd  rpc.c  rpc.h  sendmail.c  ssl_cert.pem
NT/: Frontend.vcproj  Frontend.vcxproj  MSERVER.vcproj  MSERVER.vcxproj  MTAPE.vcproj  MTAPE.vcxproj  Mlogger.dsp  Mlogger.vcproj  Mlogger.vcxproj  calib_1000.mak  calib_1000.sln  calib_1000.vcproj  calib_520.mak  calib_520.sln  calib_520.vcproj  calib_700.mak  calib_700.sln  calib_700.vcproj  calib_700.vcxproj  calib_900.mak  calib_900.sln  calib_900.vcproj  calib_hvr.mak  calib_hvr.sln  calib_hvr.vcproj  calib_hvr.vcxproj  consume.sln  consume.vcproj  consume.vcxproj  ebfe.vcproj  ebfe.vcxproj  fal.vcproj  fal.vcxproj  hanalyzer.dsp  lazylogger.vcproj  lazylogger.vcxproj  mcnaf.vcproj  mcnaf.vcxproj  mdump.vcproj  mdump.vcxproj  (+41 more)
NT/directio/: directio.cpp
NT/lib/: bit3_984.lib  midas.lib  sis1100w.lib
addons/: mdaq  mdaq-config.in  mdaq.pc.in
cmake/: FindMSCB.cmake  FindMXML.cmake  FindODBC.cmake  FindROOT.cmake  MIDASOSflags.cmake  OSflags.cmake
cmake/MyDoc/: MIDAS-PSI-alt.xmind  MIDAS-PSI.xmind  MIDASPSI.mm
cmake/addons/: exptab  mdaq.yaml
doc/: CHANGELOG.TXT  CHANGELOG_ELOG.TXT  Doxyfile  HISTORY.TXT  Makefile  course_part1.ppt  history.txt  install.txt  install_nt.txt  manual.html  readme.txt  short.txt  todo.txt
doc/old/: manual.html
doc/src/: Appendices.dox  BuildingOptions.dox  Convention.dox  DataAnalyzer.dox  DataFormat.dox  FAQ.dox  Features.dox  FrontendOperation.dox  Frontend_code.dox  Hardware.dox  HotLinks.dox  Organization.dox  Performance.dox  RunControl.dox  Sequencer.dox  SpecialConfig.dox  banner.html  common_subs.pl  contents.pl  custom_webpage.dox  docindex.dox  doit.pl  eventbuilder.dox  fe_eqdec.dox  fe_table.dox  glossary.dox  idx.pl  index.dox  index.pl  index_add.pl  index_add.txt  introduction.dox  make_contents.pl  make_index.pl  mhttpd.dox  mhttpd_custom.dox  mhttpd_custom_features.dox  mhttpd_custom_image.dox  mhttpd_custom_odb_access.dox  mhttpd_custom_status.dox  (+15 more)
doxfiles/: README.TXT  analyzer.dox  appendixA.dox  appendixB.dox  appendixC.dox  appendixD.dox  appendixE.dox  appendixG.dox  banner.html  components.dox  doxlx.cfg  doxnt.cfg  eventbuilder.dox  internal.dox  introduction.dox  mhttpd.dox  midas.dox  midox.cfg  newdocfeatures.dox  odbstruct.dox  quickstart.dox  utilities.dox
drivers/: BIT3_API.lib  bb_psi.c  bb_psi.h  bl_psi.c  bl_psi.h  btapi.h  btwapi.h  btwuser.h  caen170a.c  caenv488.c  camaclx.c  camacnul.c  camacrpc.c  cd_gen.c  cd_gen.h  cd_hv.c  cd_hv.h  cd_multi.c  cd_multi.h  ces2117.c  ces2117.h  ces8210.c  ces8210.h  chn_acc.c  chn_acc.h  das1600.c  das1600.h  dastemp.c  dastemp.h  dio.c  dsp004.c  esone.c  hyt1331.c  kcs2926.c  kcs2927.c  lrs1151.c  lrs1151.h  lrs1190.c  lrs1190.h  lrs1440.c  (+20 more)
drivers/bus/: bt617.c  btapi.h  btdef.h  btwapi.h  btwuser.h  camaclx.c  camacnul.c  camacrpc.c  cc7700pci.c  ccusb.h  ces2117.c  ces2117.h  ces8210.c  dsp004.c  esone.c  hyt1331.c  hyt1331pci.c  jorway73a.c  jorway73a.h  kcs2926.c  kcs2927.c  lrs1821.c  lrs1821.h  mfbstd.h  (+13 more)
embedded/: Makefile  hvr_200.c  hvr_200.hex  hvr_300.c  hvr_400.c  hvr_400.hex  hvr_500.c  hvr_500.hex  lcd_menu.c  mac_database.xls  mscb.h  mscbmain.c  mscbuser.c  mscbutil.c  net.h  netlib.lib  scs_1000.c  scs_1000.hex  scs_1000_scanner.c  scs_1001.c  scs_1001.hex  scs_210.c  scs_210.hex  scs_210_tc600.Uv2  scs_210_tc600.c  scs_210_tpg262.c  scs_220.c  scs_220.hex  scs_300.c  scs_300.hex  scs_310.c  scs_310.hex  scs_310_kei2000.c  scs_310_ql355p.c  scs_320.Uv2  scs_320.hex  scs_400.Uv2  scs_400.c  scs_400.hex  scs_500.c  (+32 more)
include/: esone.h  ftplib.h  git-revision.h  hardware.h  hbook.h  history.h  history_odbc.h  mcstd.h  mdsupport.h  mfbstd.h  mgd.h  midas.h  midas_macro.h  midasinc.h  mjson.h  mrpc.h  msystem.h  musbstd.h  mvmestd.h  mybos.h  pvm3.h  strlcpy.h  ybos.h  zconf.h
labview/: hvr_200.vi  hvr_300.vi  logger.vi  mscb.llb  mscb_exam.vi  mscb_init.vi  mscb_link.vi  mscb_linkf.vi  mscb_readf.vi  mscb_reads.vi  mscb_reset.vi  mscb_write.vi  mscb_writef.vi  mscb_writes.vi  pid_optimize.vi  pump_station.vi  pump_station_psi.vi  scs_310.vi  temp_control.vi  testmail.vi  vme_crate.vi
makedist/: build  build.bat
mexwrapper/: Matlab usage.docx  Readme - msc mex.txt  data.h  matlab mex command.txt  mexwrapper.c  mexwrapper.mexw64  mexwrapper.sln  mexwrapper.vcxproj  mexwrapper.vcxproj.filters  msc.c  msc.h  mscb.c  mscb.h  mscbrpc.c  mscbrpc.h  musbstd.c  musbstd.h  mxml.c  mxml.h  strlcpy.c  strlcpy.h
midas.xcworkspace/: contents.xcworkspacedata
mscb/: Makefile  build.bat  calib_1000.c  calib_520.c  calib_700.c  calib_900.c  calib_hvr.c  msc  msc.c  mscb.c  mscb.h  mscbrpc.c  mscbrpc.h  rpc.c  rpc.h  sendmail.c  windows-dll-64bit-CompilationHowTo.txt
resources/: mhttpd.MIDAS2013.css  mhttpd.MIDAS2013condensed.css  mhttpd.css  mhttpd.js  mhttpd.legacyMIDAS.css
src/: CMakeLists.txt  alarm.c  cmdedit.c  cnaf_callback.c  dm_eb.c  elog.c  elogd.cfg  fal.c  fal.cxx  fmidas.c  ftplib.c  history.c  history_common.cxx  history_midas.cxx  history_odbc.cxx  history_schema.cxx  history_sql.cxx  history_sqlite.cxx  history_sqlite_obsolete.cxx  hwtest.c  json_paste.cxx  lazylogger.c  lazylogger.cxx  mana.c  mana.cxx  mdsupport.c  mfe.c  mgd.c  mhttpd.c  mhttpd.cxx  midas.c  mjson.cxx  mlogger.c  mlogger.cxx  mongoose.c  mrpc.c  mserver.c  mtape.c  mtransition.cxx  musbstd.c  (+11 more)
utils/: CMakeLists.txt  dio.c  elog.c  elogd.c  eloghelp_fr.html  eloglang.french  eloglang.german  hwtest.c  lazy_castor.perl  lazy_copy.perl  lazy_dcache.perl  lazy_test.perl  lazylogger.c  makefile.mcnaf  mchart.c  mcnaf.c  mdump.c  mdump.cxx  melog.c  mh2sql.cxx  mhdump.cxx  mhist.c  mhist.cxx  mjson_test.cxx  mlxspeaker.c  mspeaker.c  mspeaker.cpp  mstat.c  mtape.c  odbhist.c  rs232test.c  showeqp.c  stripchart.tcl  test_ss_file_size.c  webpaw.c
vxworks/: makefile.5.2_tri  makefile.68k_tri  makefile.ppc_tri
(+1213 files in other folders)
